# telegram

./: CMakeLists.txt  README.md
include/telegram/: Bot.hpp
include/telegram/net/: HttpClient.hpp
include/telegram/types/: Response.hpp  User.hpp
include/telegram_bot_api/types/: chat.h  message.h  message_origin.h  user.h
src/telegram/: Bot.cpp
src/telegram/net/: HttpClient.cpp
src/telegram/types/: Response.cpp
src/telegram_bot_api/types/: chat.cpp  message_origin.cpp  user.cpp
tests/: bot_test.cpp
tests/net/: HttpClient_test.cpp
tests/types/: chat_test.cpp  user_test.cpp
